2008-12-16  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/multi_channel_test.c tests/multichan_throughput_test.c
    Update tests to make sure tests include tests for 10 channels.

2008-12-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Move variable definition out one scope level to avoid warnings from static
    analysis tools. Thanks Erik Hovland.

    * tests/util.c
    Make sure FILE* is closed. Thanks Erik Hovland.

    * tests/multi_channel_test.c tests/multichan_throughput_test.c
    Update tests to make sure tests include tests for 6 channels with the Sinc
    converters.

2008-12-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/multichan_throughput_test.c
    Do throughput test on all three SINC based converters.

    * src/src_sinc.c
    Rejig converter so filter coefficients are calculated once per frame and
    special case channel counts of 1, 2 and 4.

2008-12-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    *  src/samplerate.c examples/audio_out.c tests/*.c
    Fix a couple of very minor warnings uncovered by Erik Hovland using a
    static analysis tool.

    * src/src_*.c
    Fix a potential memory leak. Thanks to Peter G. Vavaroutsos for point this
    out.

    * tests/multi_channel_test.c
    Robustify test.

2008-12-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * reconfigure.mk autogen.sh
    Remove the first, add the second.

    * configure.ac
    Various updates.

    * tests/multichan_throughput_test.c tests/Makefile.am
    Add new test and hook into build.

2008-11-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/index.html
    Update best converter specs.

2008-10-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/audio_out.c
    Fix gcc-4.3 compiler warning.

2008-10-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/faq.html
    Add Q/A about accuracy of src_ratio field of SRC_DATA struct.
